apps/base/vaultwarden/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    secret.reloader.stakater.com/reload: vaultwarden
  labels:
    app.kubernetes.io/component: vaultwarden
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
  name: vaultwarden
  namespace: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vaultwarden
      app.kubernetes.io/instance: vaultwarden
      app.kubernetes.io/name: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: vaultwarden
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: vaultwarden
            - secretRef:
                name: vaultwarden
          image: docker.io/vaultwarden/server:1.34.3-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: vaultwarden
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /alive
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - name: data
              mountPath: /data
            - name: data-tmp
              mountPath: /data/tmp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: vaultwarden
      volumes:
        - name: data
          hostPath:
            path: /srv/vaultwarden
            type: Directory
        - name: data-tmp
          emptyDir:
            medium: Memory
            # sizeLimit: ...
